<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/share"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/manage"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/manage"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/help"
        app:showAsAction="never" />

</menu>