<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:background="#f0f0f0">

        <ImageView
            android:id="@+id/detail_icon"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/alphabet_n"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="30dp"
            android:textColor="#000000"
            android:textStyle="normal"
            tools:ignore="InvalidId,MissingConstraints"
            android:paddingTop="5dp"
            android:paddingBottom="40dp"
            android:gravity="center_horizontal|center"
            android:layout_gravity="center|center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:gravity="left"
            android:textSize="15dp"
            android:textColor="#9a9a9a"
            android:textAllCaps="true"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:id="@+id/detail_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/linearlayout_base_form">
            <LinearLayout
                android:id="@+id/sub_detail_phone"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="15dp">
                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="20dp"
                    android:gravity="left|center_vertical"
                    android:paddingTop="5dp"
                    android:paddingLeft="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_phone0"
                    android:textColor="#4fb580"
                    android:paddingBottom="5dp"
                    android:paddingLeft="3dp"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@android:drawable/ic_menu_call" />

            <ImageButton
                android:id="@+id/video_call"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@android:drawable/ic_menu_camera"
                android:layout_marginLeft="15dp"/>

            <ImageButton
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@android:drawable/ic_dialog_email" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:gravity="left"
            android:textSize="15dp"
            android:textColor="#9a9a9a"
            android:textAllCaps="true"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"/>
        <LinearLayout
            android:id="@+id/detail_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/linearlayout_base_form">
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_example"
                android:paddingTop="5dp"
                android:textSize="18dp"
                android:paddingLeft="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="#4fb580"
                android:paddingBottom="5dp"
                android:paddingLeft="18dp"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:gravity="left"
            android:textSize="15dp"
            android:textColor="#9a9a9a"
            android:textAllCaps="true"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"/>
        <LinearLayout
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/linearlayout_base_form">
            <TextView
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:paddingTop="5dp"
                android:textSize="18dp"
                android:paddingLeft="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="#4fb580"
                android:paddingBottom="5dp"
                android:paddingLeft="18dp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>